--- a/package.json
+++ b/package.json
@@ -15,17 +15,28 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
+    "@tanstack/react-query": "^5.59.16",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-barcode-scanner": "~13.0.1",
+    "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
+    "expo-notifications": "~0.28.19",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
+    "lottie-react-native": "6.7.0",
     "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -35,17 +46,19 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
     "react-native-svg": "15.2.0",
-    "lottie-react-native": "6.7.0",
-    "expo-localization": "~15.0.3"
+    "react-native-web": "~0.19.10",
+    "yup": "^1.4.0",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
     "autoprefixer": "^10.4.20",
+    "expo-module-scripts": "^3.5.2",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "postcss": "^8.4.47",
