--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.0.2",
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "expo": "~51.0.28",
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.16",
