--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
     "expo-location": "~17.0.1",
+    "expo-media-library": "~16.0.5",
     "expo-notifications": "~0.28.19",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
@@ -45,15 +47,17 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-maps": "1.14.0",
     "react-native-qrcode-svg": "^6.3.12",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.31.1",
+    "react-native-signature-canvas": "^4.7.2",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "yup": "^1.4.0",
     "zustand": "^5.0.0",
-    "react-native-maps": "1.14.0"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
